adjust namesign